hphp/hack/test/typecheck/new_inference/array_map_then_invoke.php.like_types.exp
File "array_map_then_invoke.php", line 15, characters 21-29:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
